--- a/views/student/addOrEdit.hbs
+++ b/views/student/addOrEdit.hbs
@@ -1,25 +1,29 @@
 <h3>{{viewTitle}}</h3>
 
 <form action="/student" method="POST" autocomplete="off">
+<input type="hidden" name="_id" value="{{student._id}}">
     <div class="form-group">
         <label>full Name</label>
-        <input type="text" class="form-control" name="fullName" placeholder="Full Name">
+        <input type="text" class="form-control" name="fullName" placeholder="Full Name" value="{{student.fullName}}">
+        
     </div>
+    
     <div class="form-group">
         <label>Email</label>
-        <input type="text" class="form-control" name="email" placeholder="Email">
+        <input type="text" class="form-control" name="email" placeholder="Email" value="{{student.email}}">
     </div>
     <div class="form-row">
         <div class="form-group col-md-6"> 
            <label>Mobile</label>
-           <input type="text" class="form-control" name="mobile" placeholder="Mobile"> 
+           <input type="text" class="form-control" name="mobile" placeholder="Mobile" value ="{{student.mobile}}" > 
         </div>
         <div class="form-group col-md-6"> 
            <label>Roll</label>
-           <input type="text" class="form-control" name="roll" placeholder="Roll"> 
+           <input type="text" class="form-control" name="roll" placeholder="Roll" value="{{student.roll}}"> 
         </div>
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-info"><i class="fa fa-database"></i>submit</button>
+         <a class="btn btn-secondary" href="/student/list"><i class="fa fa-list-alt"></i> View All</a>
     </div>
 </form>
